Bug 37020 - [4.4 Regression] FAIL: gcc.dg/debug/dwarf2/dwarf-die3.c scan-assembler-not DW_AT_inline
Summary: [4.4 Regression] FAIL: gcc.dg/debug/dwarf2/dwarf-die3.c scan-assembler-not DW...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: debug (show other bugs)
Version: 4.4.0
: P2 normal
Target Milestone: 4.4.0
Assignee: Jakub Jelinek
URL:
Keywords: wrong-debug
: 37321 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-08-04 16:13 UTC by Eric Weddington
Modified: 2008-10-23 00:56 UTC (History)
4 users (show)

See Also:
Host:
Target: dwarf2 targets
Build:
Known to work:
Known to fail:
Last reconfirmed: 2008-10-20 11:10:33


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Weddington 2008-08-04 16:13:33 UTC
From test suite for the AVR target:
FAIL: gcc.dg/debug/dwarf2/dwarf-die3.c scan-assembler-not DW_AT_inline

This test case has failed recently:
4.4.0 20080729 (experimental) [trunk revision 138276]
http://gcc.gnu.org/ml/gcc-testresults/2008-07/msg02938.html
(and in the most recent trunk).

But the test case passed on:
4.4.0 20080728 (experimental) [trunk revision 138218]
http://gcc.gnu.org/ml/gcc-testresults/2008-07/msg02823.html
Comment 1 aesok 2008-08-07 16:53:55 UTC
The gcc.dg/debug/dwarf2/dwarf-die3.c testcase FALL on x86_64-unknown-linux-gnu also.

Anatoliy
Comment 2 Eric Weddington 2008-08-08 14:38:39 UTC
The regression tester found that this regression was on revision 138238, by Jan Hubicka.:
<http://gcc.gnu.org/ml/gcc-regression/2008-07/msg00034.html>

Jan, can you take a look at this please?

Comment 3 Andrew Pinski 2008-09-02 20:45:59 UTC
*** Bug 37321 has been marked as a duplicate of this bug. ***
Comment 4 Jakub Jelinek 2008-10-20 11:10:33 UTC
Mine.
Comment 5 Jakub Jelinek 2008-10-20 23:00:34 UTC
Subject: Bug 37020

Author: jakub
Date: Mon Oct 20 22:59:13 2008
New Revision: 141253

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=141253
Log:
	PR debug/37020
	* c-decl.c (merge_decls): Don't call outlining_inline_function hook.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/c-decl.c

Comment 6 Jakub Jelinek 2008-10-20 23:09:25 UTC
Fixed.
Comment 7 Eric Weddington 2008-10-23 00:56:01 UTC
Confirmed fixed on AVR target.

Thanks Jakub!