	PR debug/37020 	* c-decl.c (merge_decls): Don't call outlining_inline_function hook.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@141253 138bc75d-0d04-0410-961f-82ee72b054a4